Added videowall, some fixes

--- a/basic/02_Plane/plane.cfg
+++ b/basic/02_Plane/plane.cfg
@@ -42,6 +42,36 @@
             <VAL>
                 <D type="TXT">default</D>
             </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
         </PARAM>
         <PARAM name="blending" type="BLENDING">
             <VAL>
@@ -70,7 +100,7 @@
         </PARAM>
         <PARAM name="translatez" type="TRANSLATEZ">
             <VAL>
-                <D type="FUNCTION">-2.0</D>
+                <D type="FUNCTION">-1.0</D>
             </VAL>
         </PARAM>
         <PARAM name="rotatex" type="ROTATEX">
@@ -103,6 +133,45 @@
                 <D type="FUNCTION">1.0</D>
             </VAL>
         </PARAM>
+        <PARAM name="guides" type="NUM" options="No,Yes,Full">
+            <VAL>
+                <D type="NUM">0</D>
+            </VAL>
+        </PARAM>
     </CONFIGPARAMS>
-    <PRECONFIGS />
+    <PRECONFIGS>
+        <PRE>
+            <P name="texture">0</P>
+        </PRE>
+        <PRE>
+            <P name="texture">1</P>
+        </PRE>
+        <PRE>
+            <P name="texture">2</P>
+        </PRE>
+        <PRE>
+            <P name="texture">3</P>
+        </PRE>
+        <PRE>
+            <P name="texture">4</P>
+        </PRE>
+        <PRE>
+            <P name="texture">5</P>
+        </PRE>
+        <PRE>
+            <P name="texture">6</P>
+        </PRE>
+        <PRE>
+            <P name="texture">7</P>
+        </PRE>
+        <PRE>
+            <P name="texture">8</P>
+        </PRE>
+        <PRE>
+            <P name="texture">9</P>
+        </PRE>
+        <PRE>
+            <P name="texture">10</P>
+        </PRE>
+    </PRECONFIGS>
 </MOCONFIG>
