--- a/basic/06_Video/video.cfg
+++ b/basic/06_Video/video.cfg
@@ -14,8 +14,26 @@
             <VAL>
                 <D type="FUNCTION">1</D>
             </VAL>
+            <VAL>
+                <D type="FUNCTION">1</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">1</D>
+            </VAL>
         </PARAM>
         <PARAM name="color" type="COLOR">
+            <VAL>
+                <D type="FUNCTION" code="RED">1.000000</D>
+                <D type="FUNCTION" code="GREEN">1.000000</D>
+                <D type="FUNCTION" code="BLUE">1.000000</D>
+                <D type="FUNCTION" code="ALPHA">1.0</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION" code="RED">1.000000</D>
+                <D type="FUNCTION" code="GREEN">1.000000</D>
+                <D type="FUNCTION" code="BLUE">1.000000</D>
+                <D type="FUNCTION" code="ALPHA">1.0</D>
+            </VAL>
             <VAL>
                 <D type="FUNCTION" code="RED">1.000000</D>
                 <D type="FUNCTION" code="GREEN">1.000000</D>
@@ -37,6 +55,12 @@
             </VAL>
         </PARAM>
         <PARAM name="movies" type="TEXTURE" property="published">
+            <VAL>
+                <D type="TXT">video.mp4</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">video.mp4</D>
+            </VAL>
             <VAL>
                 <D type="TXT">video.mp4</D>
             </VAL>
@@ -98,18 +122,42 @@
             <VAL>
                 <D type="NUM">0</D>
             </VAL>
+            <VAL>
+                <D type="NUM">0</D>
+            </VAL>
+            <VAL>
+                <D type="NUM">0</D>
+            </VAL>
         </PARAM>
         <PARAM name="startplaying" type="NUM" property="published" options="OFF,ON">
+            <VAL>
+                <D type="NUM">1</D>
+            </VAL>
+            <VAL>
+                <D type="NUM">1</D>
+            </VAL>
             <VAL>
                 <D type="NUM">1</D>
             </VAL>
         </PARAM>
         <PARAM name="loop" type="NUM" property="published">
             <VAL>
-                <D type="NUM">0</D>
+                <D type="NUM">1</D>
+            </VAL>
+            <VAL>
+                <D type="NUM">1</D>
+            </VAL>
+            <VAL>
+                <D type="NUM">1</D>
             </VAL>
         </PARAM>
         <PARAM name="showtrackdata" type="NUM" property="published">
+            <VAL>
+                <D type="NUM">0</D>
+            </VAL>
+            <VAL>
+                <D type="NUM">0</D>
+            </VAL>
             <VAL>
                 <D type="NUM">0</D>
             </VAL>
@@ -119,27 +167,57 @@
                 <D type="NUM">0</D>
             </VAL>
         </PARAM>
-        <PARAM name="pos_text_x" type="FUNCTION">
+        <PARAM name="pos_text_x" type="FUNCTION" property="published">
             <VAL>
                 <D type="FUNCTION">0.0</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">0.0</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">0.0+0.2*times</D>
             </VAL>
         </PARAM>
         <PARAM name="pos_text_y" type="FUNCTION" property="published">
             <VAL>
                 <D type="FUNCTION">0.0</D>
             </VAL>
+            <VAL>
+                <D type="FUNCTION">0*0.1*times</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">0.0+0.2*times</D>
+            </VAL>
         </PARAM>
         <PARAM name="anc_text_x" type="FUNCTION" property="published">
             <VAL>
                 <D type="FUNCTION">1.0</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">1.0</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">10</D>
             </VAL>
         </PARAM>
         <PARAM name="alt_text_y" type="FUNCTION" property="published">
             <VAL>
                 <D type="FUNCTION">1.0</D>
             </VAL>
+            <VAL>
+                <D type="FUNCTION">1.0*0.5*cos(times*0.01)</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">10</D>
+            </VAL>
         </PARAM>
         <PARAM name="pos_cuad_x" type="FUNCTION" property="published">
+            <VAL>
+                <D type="FUNCTION">0.0</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">0.0</D>
+            </VAL>
             <VAL>
                 <D type="FUNCTION">0.0</D>
             </VAL>
@@ -148,8 +226,20 @@
             <VAL>
                 <D type="FUNCTION">0.0</D>
             </VAL>
+            <VAL>
+                <D type="FUNCTION">0.0</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">0.0</D>
+            </VAL>
         </PARAM>
         <PARAM name="anc_cuad_x" type="FUNCTION" property="published">
+            <VAL>
+                <D type="FUNCTION">1.0</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">1000.0</D>
+            </VAL>
             <VAL>
                 <D type="FUNCTION">1.0</D>
             </VAL>
@@ -162,6 +252,12 @@
         <PARAM name="showmoviedata" type="NUM" property="published">
             <VAL>
                 <D type="NUM">1</D>
+            </VAL>
+            <VAL>
+                <D type="NUM">0</D>
+            </VAL>
+            <VAL>
+                <D type="NUM">0</D>
             </VAL>
         </PARAM>
         <PARAM name="display_x" type="FUNCTION">
@@ -251,6 +347,44 @@
             <P name="no_audio_output">0</P>
             <P name="no_video_output">0</P>
             <P name="no_text_output">0</P>
+        </PRE>
+        <PRE>
+            <P name="alpha">1</P>
+            <P name="phase">1</P>
+            <P name="moviemode">1</P>
+            <P name="movies">1</P>
+            <P name="color">1</P>
+            <P name="blending">1</P>
+            <P name="startplaying">1</P>
+            <P name="loop">1</P>
+            <P name="showtrackdata">1</P>
+            <P name="showmoviedata">1</P>
+            <P name="anc_text_x">1</P>
+            <P name="pos_text_y">1</P>
+            <P name="alt_text_y">1</P>
+            <P name="pos_text_x">1</P>
+            <P name="anc_cuad_x">1</P>
+            <P name="pos_cuad_x">1</P>
+            <P name="pos_cuad_y">1</P>
+        </PRE>
+        <PRE>
+            <P name="alpha">2</P>
+            <P name="phase">2</P>
+            <P name="movies">2</P>
+            <P name="moviemode">2</P>
+            <P name="color">2</P>
+            <P name="blending">2</P>
+            <P name="startplaying">2</P>
+            <P name="loop">2</P>
+            <P name="showtrackdata">2</P>
+            <P name="showmoviedata">2</P>
+            <P name="anc_text_x">2</P>
+            <P name="pos_text_y">2</P>
+            <P name="alt_text_y">2</P>
+            <P name="pos_text_x">2</P>
+            <P name="anc_cuad_x">2</P>
+            <P name="pos_cuad_x">2</P>
+            <P name="pos_cuad_y">2</P>
         </PRE>
     </PRECONFIGS>
 </MOCONFIG>
