--- a/basic/09_OpenCV/opencv.cfg
+++ b/basic/09_OpenCV/opencv.cfg
@@ -47,6 +47,15 @@
                 <D type="TXT">PARTICULAS</D>
                 <D type="TXT">FACE_SIZE_HEIGHT</D>
             </VAL>
+            <VAL>
+                <D type="TXT">FACE_POSITION_X</D>
+                <D type="TXT">NUMERIC</D>
+                <D type="TXT">MASCARA</D>
+                <D type="TXT">translatex</D>
+                <D type="TXT">PARTICULAS</D>
+                <D type="TXT">FACE_POSITION_X</D>
+            </VAL>
+
         </PARAM>
         <PARAM name="script" type="SCRIPT">
             <VAL>
