--- a/basic/11_OpenCVMotion/camera.cfg
+++ b/basic/11_OpenCVMotion/camera.cfg
@@ -40,7 +40,7 @@
         </PARAM>
         <PARAM name="camera" type="TEXT" property="published" options="default">
             <VAL>
-                <D type="TXT">default</D>
+                <D type="TXT">/dev/video1</D>
             </VAL>
         </PARAM>
         <PARAM name="color_format" type="NUM" options="default,yuv,rgb">
@@ -84,6 +84,9 @@
             </VAL>
         </PARAM>
         <PARAM name="texture" type="TEXTURE">
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
             <VAL>
                 <D type="TXT">default</D>
             </VAL>
@@ -281,6 +284,9 @@
         </PRE>
         <PRE>
             <P name="texture">9</P>
+        </PRE>
+        <PRE>
+            <P name="texture">10</P>
         </PRE>
     </PRECONFIGS>
 </MOCONFIG>
