--- a/basic/11_OpenCVMotion/icon.cfg
+++ b/basic/11_OpenCVMotion/icon.cfg
@@ -69,10 +69,13 @@
             <VAL>
                 <D type="TXT">CVBLOBS</D>
             </VAL>
+            <VAL>
+                <D type="TXT">CVBLOBS</D>
+            </VAL>
         </PARAM>
         <PARAM name="blending" type="BLENDING" property="published">
             <VAL>
-                <D type="NUM">3</D>
+                <D type="NUM">1</D>
             </VAL>
         </PARAM>
         <PARAM name="width" type="FUNCTION" property="published">
@@ -170,6 +173,11 @@
         </PRE>
         <PRE>
             <P name="texture">9</P>
+            <P name="width">1</P>
+            <P name="height">1</P>
+        </PRE>
+        <PRE>
+            <P name="texture">10</P>
             <P name="width">1</P>
             <P name="height">1</P>
         </PRE>
