--- a/basic/11_OpenCVMotion/opencv.cfg
+++ b/basic/11_OpenCVMotion/opencv.cfg
@@ -60,6 +60,9 @@
             <VAL>
                 <D type="TXT">default</D>
             </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
         </PARAM>
         <PARAM name="recognition_mode" type="NUM" property="published" options="Face,Gpu Motion,Contour,Color,Motion Detection,Blobs,Threshold,Body,Face Recognition Memorize,Face Recognition Remember">
             <VAL>
@@ -282,6 +285,10 @@
         <PRE>
             <P name="outlet">2</P>
             <P name="texture">9</P>
+        </PRE>
+        <PRE>
+            <P name="outlet">2</P>
+            <P name="texture">10</P>
         </PRE>
     </PRECONFIGS>
 </MOCONFIG>
