--- a/basic/11_OpenCVMotion/particles.cfg
+++ b/basic/11_OpenCVMotion/particles.cfg
@@ -97,6 +97,9 @@
             <VAL>
                 <D type="TXT">default</D>
             </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
         </PARAM>
         <PARAM name="folders" type="TEXTUREFOLDER">
             <VAL>
@@ -567,6 +570,21 @@
                 <D type="FUNCTION">0.0</D>
             </VAL>
         </PARAM>
+        <PARAM name="deltax_particle" type="TRANSLATEX">
+            <VAL>
+                <D type="FUNCTION">0.0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="deltay_particle" type="TRANSLATEY">
+            <VAL>
+                <D type="FUNCTION">0.0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="deltaz_particle" type="TRANSLATEZ">
+            <VAL>
+                <D type="FUNCTION">0.0</D>
+            </VAL>
+        </PARAM>
     </CONFIGPARAMS>
     <PRECONFIGS>
         <PRE>
@@ -716,6 +734,22 @@
         <PRE>
             <P name="syncro">1</P>
             <P name="texture">9</P>
+            <P name="viscosity">1</P>
+            <P name="maxage">2</P>
+            <P name="scalex_particle">1</P>
+            <P name="scaley_particle">1</P>
+            <P name="translatex">1</P>
+            <P name="translatey">1</P>
+            <P name="scalex">1</P>
+            <P name="scaley">1</P>
+            <P name="forming">1</P>
+            <P name="forming_speed">5</P>
+            <P name="speed_reaction">2</P>
+            <P name="motion_sensitivity">1</P>
+        </PRE>
+        <PRE>
+            <P name="syncro">1</P>
+            <P name="texture">10</P>
             <P name="viscosity">1</P>
             <P name="maxage">2</P>
             <P name="scalex_particle">1</P>
