--- a/basic/24_VideoWall/erase.cfg
+++ b/basic/24_VideoWall/erase.cfg
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="ISO-8859-1" ?>
-<MOCONFIG majorversion="0" minorversion="0">
+<MOCONFIG majorversion="1969497900" minorversion="1769234802">
     <DEFINITION name="erase" class="moPreEffect" />
     <UPDATE />
     <CONFIGPARAMS>
-        <PARAM name="inlet" type="INLET" />
+        <PARAM name="inlet" type="INLET">
+            <VAL>
+                <D type="TXT">VARIABLE1</D>
+                <D type="TXT">NUMERIC</D>
+            </VAL>
+        </PARAM>
         <PARAM name="outlet" type="OUTLET" />
         <PARAM name="script" type="SCRIPT">
             <VAL>
@@ -17,7 +22,7 @@
         </PARAM>
         <PARAM name="color" type="COLOR">
             <VAL>
-                <D type="FUNCTION" code="RED">0.0</D>
+                <D type="FUNCTION" code="RED">abs(cos(time))</D>
                 <D type="FUNCTION" code="GREEN">0.0</D>
                 <D type="FUNCTION" code="BLUE">0.0</D>
                 <D type="FUNCTION" code="ALPHA">0.0</D>
