--- a/basic/24_VideoWall/moldeoapioscout.cfg
+++ b/basic/24_VideoWall/moldeoapioscout.cfg
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="ISO-8859-1" ?>
-<MOCONFIG majorversion="6" minorversion="1779333768">
-    <DEFINITION name="netoscout" class="moIODevice" />
+<MOCONFIG majorversion="0" minorversion="0">
+    <DEFINITION name="" class="" />
     <UPDATE />
     <CONFIGPARAMS>
-        <PARAM name="inlet" type="INLET" />
-        <PARAM name="outlet" type="OUTLET" />
+        <PARAM name="inlet" type="INLET">
+            <VAL>
+                <D type="TXT">VARIABLE1</D>
+                <D type="TXT">NUMERIC</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="outlet" type="OUTLET">
+            <VAL />
+        </PARAM>
         <PARAM name="script" type="SCRIPT">
             <VAL>
                 <D type="TXT"></D>
@@ -14,10 +21,6 @@
             <VAL>
                 <D type="TXT">127.0.0.1</D>
                 <D type="INT">3335</D>
-            </VAL>
-            <VAL>
-                <D type="TXT">127.0.0.1</D>
-                <D type="INT">3336</D>
             </VAL>
         </PARAM>
         <PARAM name="port" type="NUM">
