--- a/basic/24_VideoWall/videowall.cfg
+++ b/basic/24_VideoWall/videowall.cfg
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="ISO-8859-1" ?>
-<MOCONFIG majorversion="1779393512" minorversion="0">
-    <DEFINITION name="mirrorg" class="moPreEffect" />
+<MOCONFIG majorversion="0" minorversion="0">
+    <DEFINITION name="videowall" class="moPostEffect" />
     <UPDATE />
     <CONFIGPARAMS>
-        <PARAM name="inlet" type="INLET" />
+        <PARAM name="inlet" type="INLET">
+            <VAL>
+                <D type="TXT">VARIABLE1</D>
+                <D type="TXT">NUMERIC</D>
+            </VAL>
+        </PARAM>
         <PARAM name="outlet" type="OUTLET" />
         <PARAM name="script" type="SCRIPT">
             <VAL>
@@ -33,46 +38,32 @@
                 <D type="FUNCTION">0.0</D>
             </VAL>
         </PARAM>
-        <PARAM name="blending" type="BLENDING">
-            <VAL>
-                <D type="NUM">0</D>
-            </VAL>
-        </PARAM>
-        <PARAM name="aberration" type="FUNCTION">
-            <VAL>
-                <D type="FUNCTION">1.0</D>
-            </VAL>
-        </PARAM>
-        <PARAM name="polygonmode" type="POLYGONMODE">
-            <VAL>
-                <D type="NUM">0</D>
-            </VAL>
-        </PARAM>
-        <PARAM name="generalx" type="FUNCTION">
-            <VAL>
-                <D type="FUNCTION">0.0</D>
-            </VAL>
-        </PARAM>
-        <PARAM name="generaly" type="FUNCTION">
-            <VAL>
-                <D type="FUNCTION">0.0</D>
-            </VAL>
-        </PARAM>
-        <PARAM name="dots" type="COMPOSE">
-            <VAL>
-                <D type="TXT">0</D>
-            </VAL>
-        </PARAM>
-        <PARAM name="lines" type="COMPOSE">
-            <VAL>
-                <D type="TXT">0</D>
-            </VAL>
-        </PARAM>
         <PARAM name="guides" type="NUM" options="No,Yes,Full">
             <VAL>
                 <D type="NUM">0</D>
             </VAL>
         </PARAM>
+        <PARAM name="configuration" type="NUM" property="published">
+            <VAL>
+                <D type="NUM">4</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="translatez" type="FUNCTION">
+            <VAL>
+                <D type="FUNCTION">0.0</D>
+            </VAL>
+        </PARAM>
     </CONFIGPARAMS>
-    <PRECONFIGS />
+    <PRECONFIGS>
+        <PRE>
+            <P name="script">0</P>
+            <P name="alpha">0</P>
+            <P name="color">0</P>
+            <P name="syncro">0</P>
+            <P name="phase">0</P>
+            <P name="guides">0</P>
+            <P name="configuration">0</P>
+            <P name="translatez">0</P>
+        </PRE>
+    </PRECONFIGS>
 </MOCONFIG>
