--- a/samples/ShaderExample/icon3.cfg
+++ b/samples/ShaderExample/icon3.cfg
@@ -1,4 +1,4 @@
-<?xml version="1.0" ?>
+<?xml version="1.0" encoding="ISO-8859-1" ?>
 <MOCONFIG majorversion="0" minorversion="5">
     <DEFINITION name="icon" class="moEffect" />
     <UPDATE />
@@ -12,10 +12,10 @@
         </PARAM>
         <PARAM name="color" type="COLOR">
             <VAL>
-                <D type="FUNCTION">1.000000</D>
-                <D type="FUNCTION">1.000000</D>
-                <D type="FUNCTION">1.000000</D>
-                <D type="FUNCTION">1.000000</D>
+                <D type="FUNCTION" code="RED">1.000000</D>
+                <D type="FUNCTION" code="GREEN">1.000000</D>
+                <D type="FUNCTION" code="BLUE">1.000000</D>
+                <D type="FUNCTION" code="ALPHA">1.000000</D>
             </VAL>
         </PARAM>
         <PARAM name="syncro" type="SYNC">
@@ -28,12 +28,39 @@
                 <D type="FUNCTION">0.0</D>
             </VAL>
         </PARAM>
-        <PARAM name="texture" type="TEXTURE">
+        <PARAM name="texture" type="TEXTURE" property="published">
             <VAL>
-                <D type="TXT">default</D>
+                <D type="TXT">shadertexture2</D>
                 <D type="TXT">shaders/Saturate.cfg</D>
                 <D type="TXT">shadertexture3</D>
                 <D type="FUNCTION">1.000000</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
             </VAL>
             <VAL>
                 <D type="TXT">default</D>
@@ -44,14 +71,14 @@
                 <D type="NUM">0</D>
             </VAL>
         </PARAM>
-        <PARAM name="width" type="FUNCTION">
+        <PARAM name="width" type="FUNCTION" property="published">
             <VAL>
-                <D type="FUNCTION">0.5</D>
+                <D type="FUNCTION">0.25</D>
             </VAL>
         </PARAM>
-        <PARAM name="height" type="FUNCTION">
+        <PARAM name="height" type="FUNCTION" property="published">
             <VAL>
-                <D type="FUNCTION">0.5</D>
+                <D type="FUNCTION">0.25</D>
             </VAL>
         </PARAM>
         <PARAM name="translatex" type="TRANSLATEX">
@@ -61,7 +88,7 @@
         </PARAM>
         <PARAM name="translatey" type="TRANSLATEY">
             <VAL>
-                <D type="FUNCTION">-0.25</D>
+                <D type="FUNCTION">-0.15</D>
             </VAL>
         </PARAM>
         <PARAM name="rotate" type="ROTATEZ">
@@ -79,6 +106,50 @@
                 <D type="FUNCTION">1</D>
             </VAL>
         </PARAM>
+        <PARAM name="script" type="SCRIPT">
+            <VAL>
+                <D type="TXT"></D>
+            </VAL>
+        </PARAM>
+        <PARAM name="guides" type="NUM" options="No,Yes,Full">
+            <VAL>
+                <D type="NUM">0</D>
+            </VAL>
+        </PARAM>
     </CONFIGPARAMS>
-    <PRECONFIGS />
+    <PRECONFIGS>
+        <PRE>
+            <P name="texture">0</P>
+        </PRE>
+        <PRE>
+            <P name="texture">1</P>
+        </PRE>
+        <PRE>
+            <P name="texture">2</P>
+        </PRE>
+        <PRE>
+            <P name="texture">3</P>
+        </PRE>
+        <PRE>
+            <P name="texture">4</P>
+        </PRE>
+        <PRE>
+            <P name="texture">5</P>
+        </PRE>
+        <PRE>
+            <P name="texture">6</P>
+        </PRE>
+        <PRE>
+            <P name="texture">7</P>
+        </PRE>
+        <PRE>
+            <P name="texture">8</P>
+        </PRE>
+        <PRE>
+            <P name="texture">9</P>
+        </PRE>
+        <PRE>
+            <P name="texture">10</P>
+        </PRE>
+    </PRECONFIGS>
 </MOCONFIG>
