--- a/samples/ShaderExample/mirrorg.cfg
+++ b/samples/ShaderExample/mirrorg.cfg
@@ -1,4 +1,4 @@
-<?xml version="1.0" ?>
+<?xml version="1.0" encoding="ISO-8859-1" ?>
 <MOCONFIG majorversion="0" minorversion="1082327040">
     <DEFINITION name="mirrorg" class="moPreEffect" />
     <UPDATE />
@@ -12,40 +12,40 @@
         </PARAM>
         <PARAM name="color" type="COLOR">
             <VAL>
-                <D type="FUNCTION">1.000000</D>
-                <D type="FUNCTION">1.000000</D>
-                <D type="FUNCTION">1.000000</D>
-                <D type="FUNCTION">1.000000</D>
+                <D type="FUNCTION" code="RED">1.000000</D>
+                <D type="FUNCTION" code="GREEN">1.000000</D>
+                <D type="FUNCTION" code="BLUE">1.000000</D>
+                <D type="FUNCTION" code="ALPHA">1.000000</D>
             </VAL>
             <VAL>
-                <D type="FUNCTION">1.0</D>
-                <D type="FUNCTION">0.991000</D>
-                <D type="FUNCTION">1.000000</D>
-                <D type="FUNCTION">1.000000</D>
+                <D type="FUNCTION" code="RED">1.0</D>
+                <D type="FUNCTION" code="GREEN">0.991000</D>
+                <D type="FUNCTION" code="BLUE">1.000000</D>
+                <D type="FUNCTION" code="ALPHA">1.000000</D>
             </VAL>
             <VAL>
-                <D type="FUNCTION">0.991000</D>
-                <D type="FUNCTION">0.991000</D>
-                <D type="FUNCTION">1.000000</D>
-                <D type="FUNCTION">1.000000</D>
+                <D type="FUNCTION" code="RED">0.991000</D>
+                <D type="FUNCTION" code="GREEN">0.991000</D>
+                <D type="FUNCTION" code="BLUE">1.000000</D>
+                <D type="FUNCTION" code="ALPHA">1.000000</D>
             </VAL>
             <VAL>
-                <D type="FUNCTION">1.0</D>
-                <D type="FUNCTION">0.991000</D>
-                <D type="FUNCTION">1.000000</D>
-                <D type="FUNCTION">1.000000</D>
+                <D type="FUNCTION" code="RED">1.0</D>
+                <D type="FUNCTION" code="GREEN">0.991000</D>
+                <D type="FUNCTION" code="BLUE">1.000000</D>
+                <D type="FUNCTION" code="ALPHA">1.000000</D>
             </VAL>
             <VAL>
-                <D type="FUNCTION">0.991000</D>
-                <D type="FUNCTION">1.0</D>
-                <D type="FUNCTION">1.000000</D>
-                <D type="FUNCTION">1.000000</D>
+                <D type="FUNCTION" code="RED">0.991000</D>
+                <D type="FUNCTION" code="GREEN">1.0</D>
+                <D type="FUNCTION" code="BLUE">1.000000</D>
+                <D type="FUNCTION" code="ALPHA">1.000000</D>
             </VAL>
             <VAL>
-                <D type="FUNCTION">0.991000</D>
-                <D type="FUNCTION">1.0</D>
-                <D type="FUNCTION">0.991</D>
-                <D type="FUNCTION">1.000000</D>
+                <D type="FUNCTION" code="RED">0.991000</D>
+                <D type="FUNCTION" code="GREEN">1.0</D>
+                <D type="FUNCTION" code="BLUE">0.991</D>
+                <D type="FUNCTION" code="ALPHA">1.000000</D>
             </VAL>
         </PARAM>
         <PARAM name="syncro" type="SYNC">
@@ -118,6 +118,16 @@
         <PARAM name="lines" type="COMPOSE">
             <VAL>
                 <D type="TXT">0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="script" type="SCRIPT">
+            <VAL>
+                <D type="TXT"></D>
+            </VAL>
+        </PARAM>
+        <PARAM name="guides" type="NUM" options="No,Yes,Full">
+            <VAL>
+                <D type="NUM">0</D>
             </VAL>
         </PARAM>
     </CONFIGPARAMS>
