--- a/taller/VisualArt/TUNEL.cfg
+++ b/taller/VisualArt/TUNEL.cfg
@@ -50,10 +50,10 @@
         </PARAM>
         <PARAM name="color" type="COLOR">
             <VAL>
-                <D type="FUNCTION"> 0.5 + 0.5*cos(4*t+pi/2) </D>
-                <D type="FUNCTION"> 0.5 + 0.5*sin(4*t+pi/3) </D>
-                <D type="FUNCTION"> 0.5 + 0.5*sin(4*t+3*pi)*cos(t) </D>
-                <D type="FUNCTION">1.0</D>
+                <D type="FUNCTION" code="RED">0.5 + 0.5*cos(4*t+pi/2)</D>
+                <D type="FUNCTION" code="GREEN">0.5 + 0.5*sin(4*t+pi/3)</D>
+                <D type="FUNCTION" code="BLUE">0.5 + 0.5*sin(4*t+3*pi)*cos(t)</D>
+                <D type="FUNCTION" code="ALPHA">1.0</D>
             </VAL>
         </PARAM>
         <PARAM name="syncro" type="SYNC">
@@ -133,6 +133,16 @@
         <PARAM name="wireframe" type="NUM">
             <VAL>
                 <D type="INT">0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="guides" type="NUM" options="No,Yes,Full">
+            <VAL>
+                <D type="NUM">0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="blending" type="BLENDING">
+            <VAL>
+                <D type="NUM">0</D>
             </VAL>
         </PARAM>
     </CONFIGPARAMS>
