--- a/taller/VisualArt/parti_stars_3.cfg
+++ b/taller/VisualArt/parti_stars_3.cfg
@@ -62,22 +62,22 @@
         </PARAM>
         <PARAM name="color" type="COLOR">
             <VAL>
-                <D type="FUNCTION">1.000000</D>
-                <D type="FUNCTION">0.000000</D>
-                <D type="FUNCTION">0.000000</D>
-                <D type="FUNCTION">1.0</D>
+                <D type="FUNCTION" code="RED">1.000000</D>
+                <D type="FUNCTION" code="GREEN">0.000000</D>
+                <D type="FUNCTION" code="BLUE">0.000000</D>
+                <D type="FUNCTION" code="ALPHA">1.0</D>
             </VAL>
             <VAL>
-                <D type="FUNCTION">1.000000</D>
-                <D type="FUNCTION">1.000000</D>
-                <D type="FUNCTION">1.000000</D>
-                <D type="FUNCTION">1.0</D>
+                <D type="FUNCTION" code="RED">1.000000</D>
+                <D type="FUNCTION" code="GREEN">1.000000</D>
+                <D type="FUNCTION" code="BLUE">1.000000</D>
+                <D type="FUNCTION" code="ALPHA">1.0</D>
             </VAL>
             <VAL>
-                <D type="FUNCTION">0.000000</D>
-                <D type="FUNCTION">0.000000</D>
-                <D type="FUNCTION">0.109804</D>
-                <D type="FUNCTION">1.0</D>
+                <D type="FUNCTION" code="RED">0.000000</D>
+                <D type="FUNCTION" code="GREEN">0.000000</D>
+                <D type="FUNCTION" code="BLUE">0.109804</D>
+                <D type="FUNCTION" code="ALPHA">1.0</D>
             </VAL>
         </PARAM>
         <PARAM name="syncro" type="SYNC">
@@ -92,22 +92,22 @@
         </PARAM>
         <PARAM name="particlecolor" type="COLOR">
             <VAL>
-                <D type="FUNCTION">1.000000</D>
-                <D type="FUNCTION">1.000000</D>
-                <D type="FUNCTION">1.000000</D>
-                <D type="FUNCTION">1.0</D>
+                <D type="FUNCTION" code="RED">1.000000</D>
+                <D type="FUNCTION" code="GREEN">1.000000</D>
+                <D type="FUNCTION" code="BLUE">1.000000</D>
+                <D type="FUNCTION" code="ALPHA">1.0</D>
             </VAL>
             <VAL>
-                <D type="FUNCTION">0.2+0.8*UnitRandom(0)</D>
-                <D type="FUNCTION">0.2+0.8*UnitRandom(0)</D>
-                <D type="FUNCTION">0.2+0.8*UnitRandom(0)</D>
-                <D type="FUNCTION">1.0</D>
+                <D type="FUNCTION" code="RED">0.2+0.8*UnitRandom(0)</D>
+                <D type="FUNCTION" code="GREEN">0.2+0.8*UnitRandom(0)</D>
+                <D type="FUNCTION" code="BLUE">0.2+0.8*UnitRandom(0)</D>
+                <D type="FUNCTION" code="ALPHA">1.0</D>
             </VAL>
             <VAL>
-                <D type="FUNCTION">1.000000</D>
-                <D type="FUNCTION">0.000000</D>
-                <D type="FUNCTION">0.000000</D>
-                <D type="FUNCTION">1.0</D>
+                <D type="FUNCTION" code="RED">1.000000</D>
+                <D type="FUNCTION" code="GREEN">0.000000</D>
+                <D type="FUNCTION" code="BLUE">0.000000</D>
+                <D type="FUNCTION" code="ALPHA">1.0</D>
             </VAL>
         </PARAM>
         <PARAM name="font" type="FONT">
@@ -149,13 +149,25 @@
             <VAL>
                 <D type="TXT">lineas_horizontales.png</D>
             </VAL>
+            <VAL>
+                <D type="TXT">lineas_horizontales.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">lineas_horizontales.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">lineas_horizontales.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">lineas_horizontales.png</D>
+            </VAL>
         </PARAM>
         <PARAM name="folders" type="TEXTUREFOLDER">
             <VAL>
                 <D type="TXT"></D>
             </VAL>
         </PARAM>
-        <PARAM name="texture_mode" type="NUM" options="UNIT,PATCH,MANY,MANY2PATCH">
+        <PARAM name="texture_mode" type="NUM" options="UNIT,PATCH,MANY,MANY2PATCH,MANYBYORDER">
             <VAL>
                 <D type="NUM">0</D>
             </VAL>
@@ -259,7 +271,7 @@
                 <D type="NUM">1</D>
             </VAL>
         </PARAM>
-        <PARAM name="orientationmode" type="NUM" options="FIXED,CAMERA,MOTION,ACCELERATION">
+        <PARAM name="orientationmode" type="NUM" options="FIXED,CAMERA,MOTION,ACCELERATION,NORMAL">
             <VAL>
                 <D type="NUM">1</D>
             </VAL>
@@ -364,7 +376,7 @@
         </PARAM>
         <PARAM name="randomvelocityy" type="FUNCTION">
             <VAL>
-                <D type="FUNCTION">10</D>
+                <D type="FUNCTION">10*0.1</D>
             </VAL>
         </PARAM>
         <PARAM name="randomvelocityz" type="FUNCTION">
@@ -395,7 +407,7 @@
                 <D type="FUNCTION">0.0</D>
             </VAL>
         </PARAM>
-        <PARAM name="rotatex_particle" type="ROTATEX">
+        <PARAM name="rotatex_particle" type="ROTATEX" property="published">
             <VAL>
                 <D type="FUNCTION">0</D>
             </VAL>
@@ -406,17 +418,17 @@
                 <D type="FUNCTION">BEATLOWFREQ</D>
             </VAL>
         </PARAM>
-        <PARAM name="rotatey_particle" type="ROTATEY">
+        <PARAM name="rotatey_particle" type="ROTATEY" property="published">
             <VAL>
-                <D type="FUNCTION">-time*10</D>
+                <D type="FUNCTION">-time*10*0</D>
             </VAL>
             <VAL>
                 <D type="FUNCTION">0</D>
             </VAL>
         </PARAM>
-        <PARAM name="rotatez_particle" type="ROTATEZ">
+        <PARAM name="rotatez_particle" type="ROTATEZ" property="published">
             <VAL>
-                <D type="FUNCTION">BEATHIGHVAL*0.01</D>
+                <D type="FUNCTION">BEATHIGHVAL*0.01*0</D>
             </VAL>
             <VAL>
                 <D type="FUNCTION">0</D>
@@ -438,7 +450,7 @@
         </PARAM>
         <PARAM name="scaley_particle" type="SCALEY">
             <VAL>
-                <D type="FUNCTION">0.02+0.05*BEATLOWVAL</D>
+                <D type="FUNCTION">0.02+1+0.005*BEATLOWVAL</D>
             </VAL>
             <VAL>
                 <D type="FUNCTION">1</D>
@@ -495,17 +507,17 @@
                 <D type="FUNCTION">0.0</D>
             </VAL>
         </PARAM>
-        <PARAM name="rotatex" type="ROTATEX">
+        <PARAM name="rotatex" type="ROTATEX" property="published">
             <VAL>
-                <D type="FUNCTION">time*abs(BEATLOWFREQ/1000)</D>
+                <D type="FUNCTION">0*time*abs(BEATLOWFREQ/1000)</D>
             </VAL>
             <VAL>
                 <D type="FUNCTION">time*abs(BEATMEDIUMVAL/1000)</D>
             </VAL>
         </PARAM>
-        <PARAM name="rotatey" type="ROTATEY">
+        <PARAM name="rotatey" type="ROTATEY" property="published">
             <VAL>
-                <D type="FUNCTION">time*10</D>
+                <D type="FUNCTION">0*time*10</D>
             </VAL>
             <VAL>
                 <D type="FUNCTION">time*5</D>
@@ -514,7 +526,7 @@
                 <D type="FUNCTION">0</D>
             </VAL>
         </PARAM>
-        <PARAM name="rotatez" type="ROTATEZ">
+        <PARAM name="rotatez" type="ROTATEZ" property="published">
             <VAL>
                 <D type="FUNCTION">0</D>
             </VAL>
@@ -578,6 +590,315 @@
                 <D type="NUM">0</D>
             </VAL>
         </PARAM>
+        <PARAM name="guides" type="NUM" options="No,Yes,Full">
+            <VAL>
+                <D type="NUM">0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="upviewx" type="FUNCTION">
+            <VAL>
+                <D type="FUNCTION">0.0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="upviewy" type="FUNCTION">
+            <VAL>
+                <D type="FUNCTION">1.0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="upviewz" type="FUNCTION">
+            <VAL>
+                <D type="FUNCTION">0.0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="lightmode" type="NUM">
+            <VAL>
+                <D type="NUM">0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="lightx" type="FUNCTION">
+            <VAL>
+                <D type="FUNCTION">0.0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="lighty" type="FUNCTION">
+            <VAL>
+                <D type="FUNCTION">4.0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="lightz" type="FUNCTION">
+            <VAL>
+                <D type="FUNCTION">0.0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="deltax_particle" type="TRANSLATEX" property="published">
+            <VAL>
+                <D type="FUNCTION">0.0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="deltay_particle" type="TRANSLATEY" property="published">
+            <VAL>
+                <D type="FUNCTION">0.0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="deltaz_particle" type="TRANSLATEZ" property="published">
+            <VAL>
+                <D type="FUNCTION">0.0</D>
+            </VAL>
+        </PARAM>
     </CONFIGPARAMS>
-    <PRECONFIGS />
+    <PRECONFIGS>
+        <PRE>
+            <P name="inlet">0</P>
+            <P name="alpha">0</P>
+            <P name="color">0</P>
+            <P name="particlecolor">0</P>
+            <P name="texture">0</P>
+            <P name="blending">0</P>
+            <P name="gravity">0</P>
+            <P name="maxage">0</P>
+            <P name="emitionperiod">0</P>
+            <P name="creationmethod">0</P>
+            <P name="orientationmode">0</P>
+            <P name="randommotion">0</P>
+            <P name="rotatex_particle">0</P>
+            <P name="rotatey_particle">0</P>
+            <P name="rotatez_particle">0</P>
+            <P name="scalex_particle">0</P>
+            <P name="scaley_particle">0</P>
+            <P name="rotatex">0</P>
+            <P name="rotatey">0</P>
+            <P name="rotatez">0</P>
+            <P name="eyez">0</P>
+        </PRE>
+        <PRE>
+            <P name="inlet">1</P>
+            <P name="alpha">1</P>
+            <P name="color">1</P>
+            <P name="particlecolor">1</P>
+            <P name="texture">1</P>
+            <P name="blending">1</P>
+            <P name="gravity">1</P>
+            <P name="maxage">1</P>
+            <P name="emitionperiod">1</P>
+            <P name="creationmethod">1</P>
+            <P name="orientationmode">1</P>
+            <P name="randommotion">1</P>
+            <P name="rotatex_particle">1</P>
+            <P name="rotatey_particle">1</P>
+            <P name="rotatez_particle">1</P>
+            <P name="scalex_particle">1</P>
+            <P name="scaley_particle">1</P>
+            <P name="rotatex">1</P>
+            <P name="rotatey">1</P>
+            <P name="rotatez">1</P>
+            <P name="eyez">1</P>
+        </PRE>
+        <PRE>
+            <P name="inlet">2</P>
+            <P name="alpha">2</P>
+            <P name="color">2</P>
+            <P name="particlecolor">2</P>
+            <P name="texture">2</P>
+            <P name="blending">1</P>
+            <P name="gravity">1</P>
+            <P name="maxage">2</P>
+            <P name="emitionperiod">1</P>
+            <P name="creationmethod">2</P>
+            <P name="orientationmode">1</P>
+            <P name="randommotion">1</P>
+            <P name="rotatex_particle">2</P>
+            <P name="rotatey_particle">1</P>
+            <P name="rotatez_particle">1</P>
+            <P name="scalex_particle">2</P>
+            <P name="scaley_particle">2</P>
+            <P name="rotatex">1</P>
+            <P name="rotatey">2</P>
+            <P name="rotatez">2</P>
+            <P name="eyez">1</P>
+        </PRE>
+        <PRE>
+            <P name="inlet">3</P>
+            <P name="alpha">3</P>
+            <P name="color">2</P>
+            <P name="particlecolor">2</P>
+            <P name="texture">3</P>
+            <P name="blending">1</P>
+            <P name="gravity">1</P>
+            <P name="maxage">3</P>
+            <P name="emitionperiod">1</P>
+            <P name="creationmethod">2</P>
+            <P name="orientationmode">1</P>
+            <P name="randommotion">1</P>
+            <P name="rotatex_particle">2</P>
+            <P name="rotatey_particle">1</P>
+            <P name="rotatez_particle">1</P>
+            <P name="scalex_particle">3</P>
+            <P name="scaley_particle">3</P>
+            <P name="rotatex">1</P>
+            <P name="rotatey">2</P>
+            <P name="rotatez">2</P>
+            <P name="eyez">1</P>
+        </PRE>
+        <PRE>
+            <P name="inlet">4</P>
+            <P name="alpha">4</P>
+            <P name="color">2</P>
+            <P name="particlecolor">2</P>
+            <P name="texture">4</P>
+            <P name="blending">1</P>
+            <P name="gravity">1</P>
+            <P name="maxage">3</P>
+            <P name="emitionperiod">1</P>
+            <P name="creationmethod">2</P>
+            <P name="orientationmode">1</P>
+            <P name="randommotion">1</P>
+            <P name="rotatex_particle">2</P>
+            <P name="rotatey_particle">1</P>
+            <P name="rotatez_particle">1</P>
+            <P name="scalex_particle">3</P>
+            <P name="scaley_particle">3</P>
+            <P name="rotatex">1</P>
+            <P name="rotatey">2</P>
+            <P name="rotatez">2</P>
+            <P name="eyez">1</P>
+        </PRE>
+        <PRE>
+            <P name="inlet">5</P>
+            <P name="alpha">4</P>
+            <P name="color">2</P>
+            <P name="particlecolor">2</P>
+            <P name="texture">5</P>
+            <P name="blending">1</P>
+            <P name="gravity">1</P>
+            <P name="maxage">3</P>
+            <P name="emitionperiod">1</P>
+            <P name="creationmethod">2</P>
+            <P name="orientationmode">1</P>
+            <P name="randommotion">1</P>
+            <P name="rotatex_particle">2</P>
+            <P name="rotatey_particle">1</P>
+            <P name="rotatez_particle">1</P>
+            <P name="scalex_particle">3</P>
+            <P name="scaley_particle">3</P>
+            <P name="rotatex">1</P>
+            <P name="rotatey">2</P>
+            <P name="rotatez">2</P>
+            <P name="eyez">1</P>
+        </PRE>
+        <PRE>
+            <P name="inlet">6</P>
+            <P name="alpha">4</P>
+            <P name="color">2</P>
+            <P name="particlecolor">2</P>
+            <P name="texture">6</P>
+            <P name="blending">1</P>
+            <P name="gravity">1</P>
+            <P name="maxage">3</P>
+            <P name="emitionperiod">1</P>
+            <P name="creationmethod">2</P>
+            <P name="orientationmode">1</P>
+            <P name="randommotion">1</P>
+            <P name="rotatex_particle">2</P>
+            <P name="rotatey_particle">1</P>
+            <P name="rotatez_particle">1</P>
+            <P name="scalex_particle">3</P>
+            <P name="scaley_particle">3</P>
+            <P name="rotatex">1</P>
+            <P name="rotatey">2</P>
+            <P name="rotatez">2</P>
+            <P name="eyez">1</P>
+        </PRE>
+        <PRE>
+            <P name="inlet">7</P>
+            <P name="alpha">4</P>
+            <P name="color">2</P>
+            <P name="particlecolor">2</P>
+            <P name="texture">7</P>
+            <P name="blending">1</P>
+            <P name="gravity">1</P>
+            <P name="maxage">3</P>
+            <P name="emitionperiod">1</P>
+            <P name="creationmethod">2</P>
+            <P name="orientationmode">1</P>
+            <P name="randommotion">1</P>
+            <P name="rotatex_particle">2</P>
+            <P name="rotatey_particle">1</P>
+            <P name="rotatez_particle">1</P>
+            <P name="scalex_particle">3</P>
+            <P name="scaley_particle">3</P>
+            <P name="rotatex">1</P>
+            <P name="rotatey">2</P>
+            <P name="rotatez">2</P>
+            <P name="eyez">1</P>
+        </PRE>
+        <PRE>
+            <P name="inlet">7</P>
+            <P name="alpha">4</P>
+            <P name="color">2</P>
+            <P name="particlecolor">2</P>
+            <P name="texture">8</P>
+            <P name="blending">1</P>
+            <P name="gravity">1</P>
+            <P name="maxage">3</P>
+            <P name="emitionperiod">1</P>
+            <P name="creationmethod">2</P>
+            <P name="orientationmode">1</P>
+            <P name="randommotion">1</P>
+            <P name="rotatex_particle">2</P>
+            <P name="rotatey_particle">1</P>
+            <P name="rotatez_particle">1</P>
+            <P name="scalex_particle">3</P>
+            <P name="scaley_particle">3</P>
+            <P name="rotatex">1</P>
+            <P name="rotatey">2</P>
+            <P name="rotatez">2</P>
+            <P name="eyez">1</P>
+        </PRE>
+        <PRE>
+            <P name="inlet">7</P>
+            <P name="alpha">4</P>
+            <P name="color">2</P>
+            <P name="particlecolor">2</P>
+            <P name="texture">9</P>
+            <P name="blending">1</P>
+            <P name="gravity">1</P>
+            <P name="maxage">3</P>
+            <P name="emitionperiod">1</P>
+            <P name="creationmethod">2</P>
+            <P name="orientationmode">1</P>
+            <P name="randommotion">1</P>
+            <P name="rotatex_particle">2</P>
+            <P name="rotatey_particle">1</P>
+            <P name="rotatez_particle">1</P>
+            <P name="scalex_particle">3</P>
+            <P name="scaley_particle">3</P>
+            <P name="rotatex">1</P>
+            <P name="rotatey">2</P>
+            <P name="rotatez">2</P>
+            <P name="eyez">1</P>
+        </PRE>
+        <PRE>
+            <P name="inlet">7</P>
+            <P name="alpha">4</P>
+            <P name="color">2</P>
+            <P name="particlecolor">2</P>
+            <P name="texture">10</P>
+            <P name="blending">1</P>
+            <P name="gravity">1</P>
+            <P name="maxage">3</P>
+            <P name="emitionperiod">1</P>
+            <P name="creationmethod">2</P>
+            <P name="orientationmode">1</P>
+            <P name="randommotion">1</P>
+            <P name="rotatex_particle">2</P>
+            <P name="rotatey_particle">1</P>
+            <P name="rotatez_particle">1</P>
+            <P name="scalex_particle">3</P>
+            <P name="scaley_particle">3</P>
+            <P name="rotatex">1</P>
+            <P name="rotatey">2</P>
+            <P name="rotatez">2</P>
+            <P name="eyez">1</P>
+        </PRE>
+    </PRECONFIGS>
 </MOCONFIG>
