--- a/basic/01_Icon/icon.cfg
+++ b/basic/01_Icon/icon.cfg
@@ -42,6 +42,36 @@
             <VAL>
                 <D type="TXT">default</D>
             </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
         </PARAM>
         <PARAM name="blending" type="BLENDING">
             <VAL>
@@ -68,15 +98,27 @@
             <VAL>
                 <D type="FUNCTION">0.0</D>
             </VAL>
+            <VAL>
+                <D type="FUNCTION">0.0</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">0.0</D>
+            </VAL>
         </PARAM>
         <PARAM name="translatey" type="TRANSLATEY">
             <VAL>
                 <D type="FUNCTION">0.0</D>
             </VAL>
-        </PARAM>
-        <PARAM name="rotate" type="ROTATEZ">
             <VAL>
                 <D type="FUNCTION">0.0</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">0.0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="rotate" type="ROTATEZ" property="published">
+            <VAL>
+                <D type="FUNCTION">seconds*10</D>
             </VAL>
         </PARAM>
         <PARAM name="scalex" type="SCALEX">
@@ -95,5 +137,83 @@
             </VAL>
         </PARAM>
     </CONFIGPARAMS>
-    <PRECONFIGS />
+    <PRECONFIGS>
+        <PRE>
+            <P name="texture">0</P>
+            <P name="width">0</P>
+            <P name="height">0</P>
+            <P name="translatex">0</P>
+            <P name="translatey">0</P>
+        </PRE>
+        <PRE>
+            <P name="texture">1</P>
+            <P name="width">1</P>
+            <P name="height">1</P>
+            <P name="translatex">1</P>
+            <P name="translatey">1</P>
+        </PRE>
+        <PRE>
+            <P name="texture">2</P>
+            <P name="width">2</P>
+            <P name="height">2</P>
+            <P name="translatex">2</P>
+            <P name="translatey">2</P>
+        </PRE>
+        <PRE>
+            <P name="texture">3</P>
+            <P name="width">3</P>
+            <P name="height">3</P>
+            <P name="translatex">3</P>
+            <P name="translatey">3</P>
+        </PRE>
+        <PRE>
+            <P name="texture">4</P>
+            <P name="width">4</P>
+            <P name="height">4</P>
+            <P name="translatex">4</P>
+            <P name="translatey">4</P>
+        </PRE>
+        <PRE>
+            <P name="texture">5</P>
+            <P name="width">5</P>
+            <P name="height">5</P>
+            <P name="translatex">5</P>
+            <P name="translatey">5</P>
+        </PRE>
+        <PRE>
+            <P name="texture">6</P>
+            <P name="width">6</P>
+            <P name="height">6</P>
+            <P name="translatex">6</P>
+            <P name="translatey">6</P>
+        </PRE>
+        <PRE>
+            <P name="texture">7</P>
+            <P name="width">7</P>
+            <P name="height">7</P>
+            <P name="translatex">7</P>
+            <P name="translatey">7</P>
+        </PRE>
+        <PRE>
+            <P name="texture">8</P>
+            <P name="width">8</P>
+            <P name="height">8</P>
+            <P name="translatex">8</P>
+            <P name="translatey">8</P>
+        </PRE>
+        <PRE>
+            <P name="texture">9</P>
+            <P name="width">9</P>
+            <P name="height">9</P>
+            <P name="translatex">9</P>
+            <P name="translatey">9</P>
+        </PRE>
+        <PRE>
+            <P name="texture">10</P>
+            <P name="width">10</P>
+            <P name="height">10</P>
+            <P name="translatex">10</P>
+            <P name="translatey">10</P>
+        </PRE>
+    </PRECONFIGS>
 </MOCONFIG>
