--- a/basic/08_Camera/camera.cfg
+++ b/basic/08_Camera/camera.cfg
@@ -9,9 +9,7 @@
                 <D type="TXT">NUMERIC</D>
             </VAL>
         </PARAM>
-        <PARAM name="outlet" type="OUTLET">
-            <VAL />
-        </PARAM>
+        <PARAM name="outlet" type="OUTLET" />
         <PARAM name="script" type="SCRIPT">
             <VAL>
                 <D type="TXT"></D>
@@ -40,52 +38,82 @@
                 <D type="FUNCTION">0.0</D>
             </VAL>
         </PARAM>
-        <PARAM name="camera" type="TEXT" options="default">
+        <PARAM name="camera" type="TEXT" property="published" options="default">
             <VAL>
-                <D type="TXT">default</D>
+                <D type="TXT">/dev/video0</D>
             </VAL>
         </PARAM>
-        <PARAM name="color_format" type="NUM" options="rgb,yuv">
+        <PARAM name="color_format" type="NUM" property="published" options="default,yuv,rgb">
             <VAL>
                 <D type="NUM">0</D>
             </VAL>
         </PARAM>
-        <PARAM name="width" type="NUM">
+        <PARAM name="width" type="NUM" property="published">
             <VAL>
-                <D type="NUM">640</D>
+                <D type="NUM">320</D>
             </VAL>
         </PARAM>
-        <PARAM name="height" type="NUM">
+        <PARAM name="height" type="NUM" property="published">
             <VAL>
-                <D type="NUM">480</D>
+                <D type="NUM">240</D>
             </VAL>
         </PARAM>
-        <PARAM name="color_bits" type="NUM" options="0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32">
+        <PARAM name="color_bits" type="NUM" property="published" options="0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32">
             <VAL>
                 <D type="NUM">24</D>
             </VAL>
         </PARAM>
-        <PARAM name="scale_width" type="NUM">
+        <PARAM name="scale_width" type="NUM" property="published">
             <VAL>
                 <D type="NUM">0</D>
             </VAL>
         </PARAM>
-        <PARAM name="scale_height" type="NUM">
+        <PARAM name="scale_height" type="NUM" property="published">
             <VAL>
                 <D type="NUM">0</D>
             </VAL>
         </PARAM>
-        <PARAM name="flip_horizontal" type="NUM">
+        <PARAM name="flip_horizontal" type="NUM" property="published">
             <VAL>
                 <D type="NUM">0</D>
             </VAL>
         </PARAM>
-        <PARAM name="flip_vertical" type="NUM">
+        <PARAM name="flip_vertical" type="NUM" property="published">
             <VAL>
                 <D type="NUM">0</D>
             </VAL>
         </PARAM>
-        <PARAM name="texture" type="TEXTURE">
+        <PARAM name="texture" type="TEXTURE" property="published">
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
             <VAL>
                 <D type="TXT">default</D>
             </VAL>
@@ -110,32 +138,32 @@
                 <D type="FUNCTION">0.0</D>
             </VAL>
         </PARAM>
-        <PARAM name="brightness" type="FUNCTION">
+        <PARAM name="brightness" type="FUNCTION" property="published">
             <VAL>
                 <D type="FUNCTION">0.0</D>
             </VAL>
         </PARAM>
-        <PARAM name="contrast" type="FUNCTION">
+        <PARAM name="contrast" type="FUNCTION" property="published">
             <VAL>
                 <D type="FUNCTION">1.0</D>
             </VAL>
         </PARAM>
-        <PARAM name="saturation" type="FUNCTION">
+        <PARAM name="saturation" type="FUNCTION" property="published">
             <VAL>
                 <D type="FUNCTION">1.0</D>
             </VAL>
         </PARAM>
-        <PARAM name="hue" type="FUNCTION">
+        <PARAM name="hue" type="FUNCTION" property="published">
             <VAL>
                 <D type="FUNCTION">0.0</D>
             </VAL>
         </PARAM>
-        <PARAM name="cameramode" type="NUM">
+        <PARAM name="cameramode" type="NUM" property="published">
             <VAL>
                 <D type="NUM">0</D>
             </VAL>
         </PARAM>
-        <PARAM name="blending" type="BLENDING">
+        <PARAM name="blending" type="BLENDING" property="published">
             <VAL>
                 <D type="INT">0</D>
             </VAL>
@@ -195,31 +223,70 @@
                 <D type="FUNCTION">1.0</D>
             </VAL>
         </PARAM>
-        <PARAM name="showcameradata" type="NUM">
+        <PARAM name="showcameradata" type="NUM" property="published">
             <VAL>
-                <D type="NUM">0</D>
+                <D type="NUM">1</D>
             </VAL>
         </PARAM>
-        <PARAM name="display_x" type="FUNCTION">
+        <PARAM name="display_x" type="FUNCTION" property="published">
             <VAL>
                 <D type="FUNCTION">-0.5</D>
             </VAL>
         </PARAM>
-        <PARAM name="display_y" type="FUNCTION">
+        <PARAM name="display_y" type="FUNCTION" property="published">
             <VAL>
                 <D type="FUNCTION">-0.35</D>
             </VAL>
         </PARAM>
-        <PARAM name="display_width" type="FUNCTION">
+        <PARAM name="display_width" type="FUNCTION" property="published">
             <VAL>
                 <D type="FUNCTION">1.0</D>
             </VAL>
         </PARAM>
-        <PARAM name="display_height" type="FUNCTION">
+        <PARAM name="display_height" type="FUNCTION" property="published">
             <VAL>
                 <D type="FUNCTION">0.05</D>
             </VAL>
         </PARAM>
+        <PARAM name="guides" type="NUM" property="published" options="No,Yes,Full">
+            <VAL>
+                <D type="NUM">0</D>
+            </VAL>
+        </PARAM>
     </CONFIGPARAMS>
-    <PRECONFIGS />
+    <PRECONFIGS>
+        <PRE>
+            <P name="texture">0</P>
+        </PRE>
+        <PRE>
+            <P name="texture">1</P>
+        </PRE>
+        <PRE>
+            <P name="texture">2</P>
+        </PRE>
+        <PRE>
+            <P name="texture">3</P>
+        </PRE>
+        <PRE>
+            <P name="texture">4</P>
+        </PRE>
+        <PRE>
+            <P name="texture">5</P>
+        </PRE>
+        <PRE>
+            <P name="texture">6</P>
+        </PRE>
+        <PRE>
+            <P name="texture">7</P>
+        </PRE>
+        <PRE>
+            <P name="texture">8</P>
+        </PRE>
+        <PRE>
+            <P name="texture">9</P>
+        </PRE>
+        <PRE>
+            <P name="texture">10</P>
+        </PRE>
+    </PRECONFIGS>
 </MOCONFIG>
