--- a/basic/24_VideoWall/image.cfg
+++ b/basic/24_VideoWall/image.cfg
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="ISO-8859-1" ?>
-<MOCONFIG majorversion="1779393512" minorversion="0">
-    <DEFINITION name="mirrorg" class="moPreEffect" />
+<MOCONFIG majorversion="0" minorversion="0">
+    <DEFINITION name="image" class="image" />
     <UPDATE />
     <CONFIGPARAMS>
         <PARAM name="inlet" type="INLET" />
@@ -10,12 +10,12 @@
                 <D type="TXT"></D>
             </VAL>
         </PARAM>
-        <PARAM name="alpha" type="ALPHA">
+        <PARAM name="alpha" type="ALPHA" property="published">
             <VAL>
-                <D type="FUNCTION">1.0</D>
+                <D type="FUNCTION">0.9</D>
             </VAL>
         </PARAM>
-        <PARAM name="color" type="COLOR">
+        <PARAM name="color" type="COLOR" property="published">
             <VAL>
                 <D type="FUNCTION" code="RED">1.0</D>
                 <D type="FUNCTION" code="GREEN">1.0</D>
@@ -33,39 +33,54 @@
                 <D type="FUNCTION">0.0</D>
             </VAL>
         </PARAM>
+        <PARAM name="texture" type="TEXTURE">
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+        </PARAM>
         <PARAM name="blending" type="BLENDING">
             <VAL>
                 <D type="NUM">0</D>
             </VAL>
         </PARAM>
-        <PARAM name="aberration" type="FUNCTION">
+        <PARAM name="pos_text_x" type="FUNCTION" property="published">
+            <VAL>
+                <D type="FUNCTION">0.0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="pos_text_y" type="FUNCTION" property="published">
+            <VAL>
+                <D type="FUNCTION">0.0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="anc_text_x" type="FUNCTION" property="published">
             <VAL>
                 <D type="FUNCTION">1.0</D>
             </VAL>
         </PARAM>
-        <PARAM name="polygonmode" type="POLYGONMODE">
+        <PARAM name="alt_text_y" type="FUNCTION" property="published">
             <VAL>
-                <D type="NUM">0</D>
+                <D type="FUNCTION">1.0</D>
             </VAL>
         </PARAM>
-        <PARAM name="generalx" type="FUNCTION">
+        <PARAM name="pos_cuad_x" type="FUNCTION" property="published">
+            <VAL>
+                <D type="FUNCTION">0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="pos_cuad_y" type="FUNCTION" property="published">
             <VAL>
                 <D type="FUNCTION">0.0</D>
             </VAL>
         </PARAM>
-        <PARAM name="generaly" type="FUNCTION">
+        <PARAM name="anc_cuad_x" type="FUNCTION" property="published">
             <VAL>
-                <D type="FUNCTION">0.0</D>
+                <D type="FUNCTION">1.0</D>
             </VAL>
         </PARAM>
-        <PARAM name="dots" type="COMPOSE">
+        <PARAM name="alt_cuad_y" type="FUNCTION" property="published">
             <VAL>
-                <D type="TXT">0</D>
-            </VAL>
-        </PARAM>
-        <PARAM name="lines" type="COMPOSE">
-            <VAL>
-                <D type="TXT">0</D>
+                <D type="FUNCTION">1.0</D>
             </VAL>
         </PARAM>
         <PARAM name="guides" type="NUM" options="No,Yes,Full">
