--- a/samples/ShaderExample/debug.cfg
+++ b/samples/ShaderExample/debug.cfg
@@ -1,4 +1,4 @@
-<?xml version="1.0" ?>
+<?xml version="1.0" encoding="ISO-8859-1" ?>
 <MOCONFIG majorversion="0" minorversion="98">
     <DEFINITION name="debug" class="posteffect" />
     <UPDATE />
@@ -12,10 +12,10 @@
         </PARAM>
         <PARAM name="color" type="COLOR">
             <VAL>
-                <D type="FUNCTION">0.000000</D>
-                <D type="FUNCTION">1.000000</D>
-                <D type="FUNCTION">0.121569</D>
-                <D type="FUNCTION">1.0</D>
+                <D type="FUNCTION" code="RED">0.000000</D>
+                <D type="FUNCTION" code="GREEN">1.000000</D>
+                <D type="FUNCTION" code="BLUE">0.121569</D>
+                <D type="FUNCTION" code="ALPHA">1.0</D>
             </VAL>
         </PARAM>
         <PARAM name="syncro" type="SYNC">
@@ -33,6 +33,16 @@
                 <D type="TXT">Default</D>
                 <D type="NUM">0</D>
                 <D type="NUM">32</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="script" type="SCRIPT">
+            <VAL>
+                <D type="TXT"></D>
+            </VAL>
+        </PARAM>
+        <PARAM name="guides" type="NUM" options="No,Yes,Full">
+            <VAL>
+                <D type="NUM">0</D>
             </VAL>
         </PARAM>
     </CONFIGPARAMS>
