--- a/samples/ShaderExample/erase.cfg
+++ b/samples/ShaderExample/erase.cfg
@@ -1,5 +1,4 @@
-<<<<<<< .mine
-<?xml version="1.0" ?>
+<?xml version="1.0" encoding="ISO-8859-1" ?>
 <MOCONFIG majorversion="52813256" minorversion="52815976">
     <DEFINITION name="erase" class="preeffect" />
     <UPDATE />
@@ -13,28 +12,28 @@
         </PARAM>
         <PARAM name="color" type="COLOR">
             <VAL>
-                <D type="FUNCTION">0.000000</D>
-                <D type="FUNCTION">0.000000</D>
-                <D type="FUNCTION">0.000000</D>
-                <D type="FUNCTION">1.000000</D>
+                <D type="FUNCTION" code="RED">0.000000</D>
+                <D type="FUNCTION" code="GREEN">0.000000</D>
+                <D type="FUNCTION" code="BLUE">0.000000</D>
+                <D type="FUNCTION" code="ALPHA">1.000000</D>
             </VAL>
             <VAL>
-                <D type="FUNCTION">1.0</D>
-                <D type="FUNCTION">1.0</D>
-                <D type="FUNCTION">1.0</D>
-                <D type="FUNCTION">1.0</D>
+                <D type="FUNCTION" code="RED">1.0</D>
+                <D type="FUNCTION" code="GREEN">1.0</D>
+                <D type="FUNCTION" code="BLUE">1.0</D>
+                <D type="FUNCTION" code="ALPHA">1.0</D>
             </VAL>
             <VAL>
-                <D type="FUNCTION">1.000000</D>
-                <D type="FUNCTION">0.000000</D>
-                <D type="FUNCTION">0.501961</D>
-                <D type="FUNCTION">1.000000</D>
+                <D type="FUNCTION" code="RED">1.000000</D>
+                <D type="FUNCTION" code="GREEN">0.000000</D>
+                <D type="FUNCTION" code="BLUE">0.501961</D>
+                <D type="FUNCTION" code="ALPHA">1.000000</D>
             </VAL>
             <VAL>
-                <D type="FUNCTION">0.501961</D>
-                <D type="FUNCTION">1.000000</D>
-                <D type="FUNCTION">0.000000</D>
-                <D type="FUNCTION">1.000000</D>
+                <D type="FUNCTION" code="RED">0.501961</D>
+                <D type="FUNCTION" code="GREEN">1.000000</D>
+                <D type="FUNCTION" code="BLUE">0.000000</D>
+                <D type="FUNCTION" code="ALPHA">1.000000</D>
             </VAL>
         </PARAM>
         <PARAM name="syncro" type="SYNC">
@@ -47,45 +46,11 @@
                 <D type="FUNCTION">0.0</D>
             </VAL>
         </PARAM>
-    </CONFIGPARAMS>
-    <PRECONFIGS />
-</MOCONFIG>
-=======
-<?xml version="1.0" ?>
-<MOCONFIG majorversion="7768" minorversion="21077">
-    <DEFINITION name="erase" class="preeffect" />
-    <UPDATE />
-    <CONFIGPARAMS>
-        <PARAM name="inlet" type="INLET">
-            <VAL />
-        </PARAM>
-        <PARAM name="outlet" type="OUTLET">
-            <VAL />
-        </PARAM>
-        <PARAM name="alpha" type="ALPHA">
+        <PARAM name="script" type="SCRIPT">
             <VAL>
-                <D type="FUNCTION">1.0</D>
-            </VAL>
-        </PARAM>
-        <PARAM name="color" type="COLOR">
-            <VAL>
-                <D type="FUNCTION">0.0</D>
-                <D type="FUNCTION">0.0</D>
-                <D type="FUNCTION">0.0</D>
-                <D type="FUNCTION">0.0</D>
-            </VAL>
-        </PARAM>
-        <PARAM name="syncro" type="SYNC">
-            <VAL>
-                <D type="FUNCTION">1.0</D>
-            </VAL>
-        </PARAM>
-        <PARAM name="phase" type="PHASE">
-            <VAL>
-                <D type="FUNCTION">0.0</D>
+                <D type="TXT"></D>
             </VAL>
         </PARAM>
     </CONFIGPARAMS>
     <PRECONFIGS />
 </MOCONFIG>
->>>>>>> .r287
