--- a/samples/ShaderExample/shaders/Sobel.cfg
+++ b/samples/ShaderExample/shaders/Sobel.cfg
@@ -1,8 +1,8 @@
 <?xml version="1.0" standalone=no>
-	<!-- Shader configuration version 1.0 -->	
+	<!-- Shader configuration version 1.0 -->
 	<MOCONFIG majorversion="3" minorversion="1">
-		<DEFINITION name="shader" class="shader">Archivo de configuración para shaders</DEFINITION>
-		<UPDATE day="21/05/2005" hour="12:20:00">21/05/2005 12:20:00</UPDATE>		
+		<DEFINITION name="shader" class="shader">Archivo de configuraciï¿½n para shaders</DEFINITION>
+		<UPDATE day="21/05/2005" hour="12:20:00">21/05/2005 12:20:00</UPDATE>
 		<CONFIGPARAMS>
 			<PARAM name="type" type="NUM">
 				<VAL><D type="NUM">0</D></VAL>
@@ -14,4 +14,4 @@
 		<PRECONFIGS>
 			<PRE></PRE>
 		</PRECONFIGS>
-	</MOCONFIG>	
+	</MOCONFIG>
