--- a/taller/VisualArt/CAMARA.cfg
+++ b/taller/VisualArt/CAMARA.cfg
@@ -41,16 +41,53 @@
                 <D type="TXT">default</D>
             </VAL>
         </PARAM>
-        <PARAM name="color_format" type="NUM" options="rgb,yuv">
+        <PARAM name="color_format" type="NUM" options="default,rgb,yuv">
             <VAL>
                 <D type="NUM">0</D>
             </VAL>
         </PARAM>
-        <PARAM name="width" type="NUM" />
-        <PARAM name="height" type="NUM" />
-        <PARAM name="color_bits" type="NUM" options="0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32" />
-        <PARAM name="scale_width" type="NUM" />
-        <PARAM name="scale_height" type="NUM" />
+        <PARAM name="width" type="NUM">
+          <!--<VAL>
+              <D type="NUM">640</D>
+          </VAL>-->
+        </PARAM>
+        <PARAM name="height" type="NUM">
+          <!--<VAL>
+              <D type="NUM">480</D>
+          </VAL>-->
+        </PARAM>
+        <PARAM name="color_bits" type="NUM" options="0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32">
+            <!--<VAL>
+                <D type="NUM">24</D>
+            </VAL>-->
+        </PARAM>
+        <PARAM name="scale_width" type="NUM">
+          <!--
+            <VAL>
+                <D type="NUM">0</D>
+            </VAL>-->
+        </PARAM>
+        <PARAM name="scale_height" type="NUM">
+          <!--
+            <VAL>
+                <D type="NUM">0</D>
+            </VAL>
+          -->
+        </PARAM>
+        <PARAM name="flip_horizontal" type="NUM">
+          <!--
+            <VAL>
+                <D type="NUM">0</D>
+            </VAL>
+          -->
+        </PARAM>
+        <PARAM name="flip_vertical" type="NUM">
+          <!--
+            <VAL>
+                <D type="NUM">0</D>
+            </VAL>
+          -->
+        </PARAM>
         <PARAM name="texture" type="TEXTURE">
             <VAL>
                 <D type="TXT">default</D>
@@ -189,12 +226,7 @@
                 <D type="FUNCTION">0.05</D>
             </VAL>
         </PARAM>
-        <PARAM name="flip_horizontal" type="NUM">
-            <VAL>
-                <D type="NUM">0</D>
-            </VAL>
-        </PARAM>
-        <PARAM name="flip_vertical" type="NUM">
+        <PARAM name="guides" type="NUM" options="No,Yes,Full">
             <VAL>
                 <D type="NUM">0</D>
             </VAL>
