--- a/taller/VisualArt/parti_stars.cfg
+++ b/taller/VisualArt/parti_stars.cfg
@@ -56,28 +56,28 @@
         </PARAM>
         <PARAM name="color" type="COLOR">
             <VAL>
-                <D type="FUNCTION">0.000000</D>
-                <D type="FUNCTION">1.000000</D>
-                <D type="FUNCTION">1.000000</D>
-                <D type="FUNCTION">1.0</D>
+                <D type="FUNCTION" code="RED">0.000000</D>
+                <D type="FUNCTION" code="GREEN">1.000000</D>
+                <D type="FUNCTION" code="BLUE">1.000000</D>
+                <D type="FUNCTION" code="ALPHA">1.0</D>
             </VAL>
             <VAL>
-                <D type="FUNCTION">1.0</D>
-                <D type="FUNCTION">1.0</D>
-                <D type="FUNCTION">1.0</D>
-                <D type="FUNCTION">1.0</D>
+                <D type="FUNCTION" code="RED">1.0</D>
+                <D type="FUNCTION" code="GREEN">1.0</D>
+                <D type="FUNCTION" code="BLUE">1.0</D>
+                <D type="FUNCTION" code="ALPHA">1.0</D>
             </VAL>
             <VAL>
-                <D type="FUNCTION">0.000000</D>
-                <D type="FUNCTION">1.000000</D>
-                <D type="FUNCTION">0.121569</D>
-                <D type="FUNCTION">1.0</D>
+                <D type="FUNCTION" code="RED">0.000000</D>
+                <D type="FUNCTION" code="GREEN">1.000000</D>
+                <D type="FUNCTION" code="BLUE">0.121569</D>
+                <D type="FUNCTION" code="ALPHA">1.0</D>
             </VAL>
             <VAL>
-                <D type="FUNCTION">1.000000</D>
-                <D type="FUNCTION">0.000000</D>
-                <D type="FUNCTION">1.000000</D>
-                <D type="FUNCTION">1.0</D>
+                <D type="FUNCTION" code="RED">1.000000</D>
+                <D type="FUNCTION" code="GREEN">0.000000</D>
+                <D type="FUNCTION" code="BLUE">1.000000</D>
+                <D type="FUNCTION" code="ALPHA">1.0</D>
             </VAL>
         </PARAM>
         <PARAM name="syncro" type="SYNC">
@@ -92,16 +92,16 @@
         </PARAM>
         <PARAM name="particlecolor" type="COLOR">
             <VAL>
-                <D type="FUNCTION">1.000000</D>
-                <D type="FUNCTION">1.000000</D>
-                <D type="FUNCTION">1.000000</D>
-                <D type="FUNCTION">1.0</D>
+                <D type="FUNCTION" code="RED">1.000000</D>
+                <D type="FUNCTION" code="GREEN">1.000000</D>
+                <D type="FUNCTION" code="BLUE">1.000000</D>
+                <D type="FUNCTION" code="ALPHA">1.0</D>
             </VAL>
             <VAL>
-                <D type="FUNCTION">0.2+0.8*UnitRandom(0)</D>
-                <D type="FUNCTION">0.2+0.8*UnitRandom(0)</D>
-                <D type="FUNCTION">0.2+0.8*UnitRandom(0)</D>
-                <D type="FUNCTION">1.0</D>
+                <D type="FUNCTION" code="RED">0.2+0.8*UnitRandom(0)</D>
+                <D type="FUNCTION" code="GREEN">0.2+0.8*UnitRandom(0)</D>
+                <D type="FUNCTION" code="BLUE">0.2+0.8*UnitRandom(0)</D>
+                <D type="FUNCTION" code="ALPHA">1.0</D>
             </VAL>
         </PARAM>
         <PARAM name="font" type="FONT">
@@ -152,7 +152,7 @@
                 <D type="TXT">imfuentes</D>
             </VAL>
         </PARAM>
-        <PARAM name="texture_mode" type="NUM" options="UNIT,PATCH,MANY,MANY2PATCH">
+        <PARAM name="texture_mode" type="NUM" options="UNIT,PATCH,MANY,MANY2PATCH,MANYBYORDER">
             <VAL>
                 <D type="NUM">0</D>
             </VAL>
@@ -265,7 +265,7 @@
                 <D type="NUM">1</D>
             </VAL>
         </PARAM>
-        <PARAM name="orientationmode" type="NUM" options="FIXED,CAMERA,MOTION,ACCELERATION">
+        <PARAM name="orientationmode" type="NUM" options="FIXED,CAMERA,MOTION,ACCELERATION,NORMAL">
             <VAL>
                 <D type="NUM">1</D>
             </VAL>
@@ -606,6 +606,61 @@
         <PARAM name="orderingmode" type="NUM" options="NONE,ZDEPTHTEST,ZPOSITION,COMPLETE">
             <VAL>
                 <D type="NUM">0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="guides" type="NUM" options="No,Yes,Full">
+            <VAL>
+                <D type="NUM">0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="upviewx" type="FUNCTION">
+            <VAL>
+                <D type="FUNCTION">0.0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="upviewy" type="FUNCTION">
+            <VAL>
+                <D type="FUNCTION">1.0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="upviewz" type="FUNCTION">
+            <VAL>
+                <D type="FUNCTION">0.0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="lightmode" type="NUM">
+            <VAL>
+                <D type="NUM">0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="lightx" type="FUNCTION">
+            <VAL>
+                <D type="FUNCTION">0.0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="lighty" type="FUNCTION">
+            <VAL>
+                <D type="FUNCTION">4.0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="lightz" type="FUNCTION">
+            <VAL>
+                <D type="FUNCTION">0.0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="deltax_particle" type="TRANSLATEX">
+            <VAL>
+                <D type="FUNCTION">0.0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="deltay_particle" type="TRANSLATEY">
+            <VAL>
+                <D type="FUNCTION">0.0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="deltaz_particle" type="TRANSLATEZ">
+            <VAL>
+                <D type="FUNCTION">0.0</D>
             </VAL>
         </PARAM>
     </CONFIGPARAMS>
